--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,7 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 body {
@@ -47,6 +48,7 @@ body {
   background-color: var(--color-bg);
   line-height: 1.5;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 input,
